--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </div>
 
     </div>
-
+  </div>
+  <div class="AContainer">
+    <div class="A" ><h2>A</h2></div>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="./game.js" charset="utf-8"></script>
