--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
-    <div lass="row">
-
+    <div>
       <div type="button" id="green" class="btn green">
 
       </div>
@@ -32,10 +31,14 @@
       </div>
 
     </div>
+
+    
   </div>
   <div class="AContainer">
     <div class="A" ><h2>A</h2></div>
   </div>
+
+  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="./game.js" charset="utf-8"></script>
 </body>
